# JCRender

./: .gitignore  CMakeLists.txt
src/: main.c
src/renderer_sw/: jc_raster.c  jc_raster.h
